--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 .footer {
-    background: #FAFAFA;
+    background: rgb(247, 190, 105);
+    color: black;
     border-top: 1px solid rgba(0, 0, 0, 0.06);
     padding: var(--spacing-5xl) 0 var(--spacing-3xl);
 }
